<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wit_driver</name>
  <version>0.1.0</version>
  <description>Wit Driver package.</description>
  <maintainer email="53618876+fateshelled@users.noreply.github.com">ubuntu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ecl_devices</depend>
  <depend>ecl_sigslots</depend>
  <depend>ecl_time</depend>
  <depend>ecl_build</depend>
  <depend>ecl_geometry</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
