<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wit_node</name>
  <version>0.1.0</version>
  <description>The wit_node package is a ROS2 package for wit motion IMU and GPS sensor.</description>
  <maintainer email="53618876+fateshelled@users.noreply.github.com">ubuntu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ecl_devices</depend>
  <depend>ecl_sigslots</depend>
  <depend>ecl_time</depend>
  <depend>ecl_build</depend>
  <depend>ecl_geometry</depend>
  <depend>wit_msgs</depend>
  <depend>wit_driver</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
